Fix overlapping hrs

--- a/client/src/components/Dropdown.css
+++ b/client/src/components/Dropdown.css
@@ -5,6 +5,7 @@
     display: none;
     background-color: white;
     padding: 0 0 0 40px;
+    z-index: 1;
 }
 
 .dropdown li {
